[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jwks-server-py"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "jwcrypto>=1.5.6",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0",
  "black>=24.4.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","I","UP","B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]
